samples/_failures_safe/1761723184_d40e26_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8801b4a7.c: In function ‘main’:
./samples/SAFE/__tmp_8801b4a7.c:145:15: error: expected ‘;’ at end of input
  145 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_8801b4a7.c:145:9: error: expected declaration or statement at end of input
  145 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_8801b4a7.c:145:9: error: expected declaration or statement at end of input
